--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,9 +64,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\DeathHandler.cs" />
-    <Compile Include="Assets\Scripts\enemy.cs" />
     <Compile Include="Assets\Scripts\LevelTransition.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\PouncingEnemy.cs" />
+    <Compile Include="Assets\Scripts\RespawnPoint.cs" />
     <Compile Include="Assets\Scripts\Singleton\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Singleton\Singleton.cs" />
     <Compile Include="Assets\Scripts\SpawnRespawnHandler.cs" />
