--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,19 +62,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BouncyDeathHandler.cs" />
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
-    <Compile Include="Assets\Scripts\DashColorer.cs" />
     <Compile Include="Assets\Scripts\DeathHandler.cs" />
-    <Compile Include="Assets\Scripts\fadeScript.cs" />
-    <Compile Include="Assets\Scripts\InGameText.cs" />
-    <Compile Include="Assets\Scripts\LevelTransition.cs" />
+    <Compile Include="Assets\Scripts\Enemies\bouncy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\MaxSpeedLimiter.cs" />
+    <Compile Include="Assets\Scripts\Enemies\PouncingEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\SpitRemoval.cs" />
+    <Compile Include="Assets\Scripts\Enemies\SpittingEnemy.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\PouncingEnemy.cs" />
-    <Compile Include="Assets\Scripts\RespawnPoint.cs" />
     <Compile Include="Assets\Scripts\Singleton\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Singleton\Singleton.cs" />
     <Compile Include="Assets\Scripts\Singleton\SpawnRespawnHandler.cs" />
     <Compile Include="Assets\Scripts\TheVictoryScreen.cs" />
+    <Compile Include="Assets\Scripts\Triggers\InGameText.cs" />
+    <Compile Include="Assets\Scripts\Triggers\LevelTransition.cs" />
+    <Compile Include="Assets\Scripts\Triggers\RespawnPoint.cs" />
+    <Compile Include="Assets\Scripts\UI\DashColorer.cs" />
+    <Compile Include="Assets\Scripts\UI\fadeScript.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
